name:           GoreAndAsh
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         ncrashed
license:        GPL-3
copyright:      2013 Anton Gushcha
license-file:   ./LICENSE
maintainer:     ncrashed@gmail.com
data-files:     assets/textures/planks.jpg

executable GoreAndAsh-Client
  build-depends:   
                   base >= 4,
                   distributed-process >=0.4.2 && <0.5,
                   network-transport-tcp >=0.3.1 && <0.4,
                   network >=2.4.1 && <2.5,
                   bytestring >=0.10.0 && <0.11,
                   network-transport >=0.3.0 && <0.4,
                   network-transport-inmemory >=0.3.0 && <0.4,
                   GLUT >=2.5.0 && <2.6,
                   GPipe >=1.4.1 && <1.5,
                   GPipe-TextureLoad >=1.0.4 && <1.1,
                   Vec >=1.0.1 && <1.1
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs
  hs-source-dirs:  source/client

executable GoreAndAsh-Server
  build-depends:   
                   base >= 4,
                   distributed-process >=0.4.2 && <0.5,
                   network-transport-tcp >=0.3.1 && <0.4,
                   network >=2.4.1 && <2.5,
                   containers >=0.5.0 && <0.6,
                   network-transport-inmemory >=0.3.0 && <0.4
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs
  hs-source-dirs:  source/server

