name:           GoreAndAsh
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         ncrashed
license:        GPL-3
copyright:      2013 Anton Gushcha
license-file:   ./LICENSE
maintainer:     ncrashed@gmail.com
data-files:     
                media/test/1S03.png, 
                media/test/2S03.png

executable GoreAndAsh-Client
  build-depends:   
                   base >= 4,
                   containers >=0.5.0 && <0.6,
                   transformers >=0.3.0 && <0.4,
                   data-accessor >=0.2.2 && <0.3,
                   bytestring >=0.10.0 && <0.11,
                   list-tries >=0.4.1 && <0.5,
                   repa >=3.2.3 && <3.3,
                   Boolean >=0.0.1 && <0.1,
                   Vec >=1.0.1 && <1.1,
                   Vec-Boolean >=1.0.6 && <1.1,
                   OpenGL >=2.8.0 && <2.9,
                   GLUT >=2.5.0 && <2.6,
                   network >=2.4.1 && <2.5,
                   network-transport >=0.3.0 && <0.4,
                   distributed-process >=0.4.2 && <0.5,
                   hashmap >=1.3.0 && <1.4,
                   directory >=1.2.0 && <1.3,
                   filepath >=1.3.0 && <1.4,
                   either >=3.4.1 && <3.5,
                   mtl >=2.1.2 && <2.2,
                   hslogger >=1.2.3 && <1.3,
                   bitmap >=0.0.2 && <0.1,
                   stb-image >=0.2.1 && <0.3
                   
  ghc-options:     -Wall -rtsopts -threaded
  main-is:         Main.hs
  hs-source-dirs:  
                   source/client, 
                   source/shared
  Extensions:      
                   CPP, 
                   OverloadedStrings
  if os(windows)
    ld-options: --enable-stdcall-fixup
    C-sources: ./source/shared/Network/Transport/ntohl.c    
    
executable GoreAndAsh-Server
  build-depends:   
                   base >= 4,
                   containers >=0.5.0 && <0.6,
                   data-accessor >=0.2.2 && <0.3,
                   repa >=3.2.3 && <3.3,
                   network >=2.4.1 && <2.5,
                   distributed-process >=0.4.2 && <0.5,
                   directory >=1.2.0 && <1.3,
                   filepath >=1.3.0 && <1.4,
                   mtl >=2.1.2 && <2.2,
                   split >=0.2.2 && <0.3,
                   bitmap >=0.0.2 && <0.1,
                   stb-image >=0.2.1 && <0.3
             
  ghc-options:     -Wall -rtsopts -threaded
  main-is:         Main.hs
  hs-source-dirs:  
                   source/server, 
                   source/shared
  Extensions:      CPP				   
  if os(windows)
    ld-options: --enable-stdcall-fixup
    C-sources: ./source/shared/Network/Transport/ntohl.c               

